Add legal entity info and refund policy page for Paddle verification

--- a/terms.html
+++ b/terms.html
@@ -44,9 +44,17 @@
         <p class="last-updated" data-i18n="terms.updated">Last updated: January 2025</p>
 
         <section>
+            <h2>Legal Entity</h2>
+            <p><strong>ECHO</strong> is a mobile application developed and operated by Adrian Cheng (individual developer), based in Shenyang, Liaoning, China.</p>
+            <p>Business Name: <strong>ECHO</strong></p>
+            <p>Contact Email: support@adrian-m.top</p>
+        </section>
+
+        <section>
             <h2>1. Acceptance of Terms</h2>
             <p>Welcome to ECHO ("the App" or "we"). By accessing or using the App, you agree to be bound by these Terms of Service ("Terms"). If you do not agree to these Terms, please do not use the App.</p>
         </section>
+
 
         <section>
             <h2>2. Service Description</h2>
