Fix subscription plans: Monthly, Quarterly, Yearly (no lifetime)

--- a/terms.html
+++ b/terms.html
@@ -79,7 +79,12 @@
         <section>
             <h2>4. Subscription Services</h2>
             <p>4.1 The App offers both free and PRO membership subscription services.</p>
-            <p>4.2 PRO membership is billed monthly, yearly, or as a one-time lifetime purchase. See pricing page for details.</p>
+            <p>4.2 PRO membership subscription plans:</p>
+            <ul>
+                <li>Monthly Plan: Billed monthly</li>
+                <li>Quarterly Plan: Billed every 3 months</li>
+                <li>Yearly Plan: Billed annually</li>
+            </ul>
             <p>4.3 Subscriptions will automatically renew at the end of each billing cycle unless you cancel before the renewal date.</p>
             <p>4.4 After cancellation, you can continue to use PRO features until the end of the current billing cycle.</p>
         </section>
