Fix Paddle requirements: 14-day refund, clear legal name, no qualifiers

--- a/refund.html
+++ b/refund.html
@@ -44,71 +44,36 @@
         <p class="last-updated">Last updated: January 2025</p>
 
         <section>
-            <h2>Legal Entity</h2>
-            <p><strong>ECHO</strong> is a mobile application developed and operated by Adrian Cheng (individual developer), based in Shenyang, Liaoning, China.</p>
-            <p>Business Name: <strong>ECHO</strong></p>
-            <p>Contact Email: support@adrian-m.top</p>
+            <h2>Legal Business Name</h2>
+            <p><strong>ECHO</strong></p>
+            <p>Operated by Adrian Cheng, Shenyang, Liaoning, China.</p>
+            <p>Contact: support@adrian-m.top</p>
         </section>
 
         <section>
-            <h2>1. Overview</h2>
-            <p>At ECHO, we want you to be completely satisfied with your purchase. If you are not satisfied with your PRO subscription, you may request a refund according to the terms outlined below.</p>
+            <h2>14-Day Money-Back Guarantee</h2>
+            <p>We offer a <strong>14-day money-back guarantee</strong> for all purchases.</p>
+            <p>If you are not satisfied with your purchase, you may request a full refund within 14 days of the purchase date for any reason.</p>
         </section>
 
         <section>
-            <h2>2. 7-Day Money-Back Guarantee</h2>
-            <p>We offer a <strong>7-day money-back guarantee</strong> for all new PRO subscription purchases:</p>
-            <ul>
-                <li>You may request a full refund within 7 days of your initial purchase, no questions asked.</li>
-                <li>This guarantee applies to first-time PRO subscribers only.</li>
-            </ul>
+            <h2>How to Request a Refund</h2>
+            <p>To request a refund, please email us at <a href="mailto:support@adrian-m.top">support@adrian-m.top</a> with your purchase details.</p>
         </section>
 
         <section>
-            <h2>3. How to Request a Refund</h2>
-            <p>To request a refund, please:</p>
-            <ul>
-                <li>Email us at <a href="mailto:support@adrian-m.top">support@adrian-m.top</a></li>
-                <li>Include your account email address and purchase date</li>
-                <li>State the reason for your refund request (optional but helpful)</li>
-            </ul>
+            <h2>Refund Processing</h2>
+            <p>Refunds will be processed within 5-10 business days and credited to the original payment method.</p>
         </section>
 
         <section>
-            <h2>4. Refund Processing</h2>
-            <ul>
-                <li>Refunds will be processed within <strong>5-10 business days</strong></li>
-                <li>Refunds will be credited to the original payment method</li>
-                <li>You will receive an email confirmation once the refund is processed</li>
-            </ul>
+            <h2>Subscription Cancellation</h2>
+            <p>You can cancel your subscription at any time. Your PRO access will continue until the end of your current billing period. No further charges will be made after cancellation.</p>
         </section>
 
         <section>
-            <h2>5. After the 7-Day Period</h2>
-            <p>Refund requests made after the 7-day period will be considered on a case-by-case basis. We may offer:</p>
-            <ul>
-                <li>Partial refunds</li>
-                <li>Account credits</li>
-                <li>Extended trial periods</li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>6. Subscription Cancellation</h2>
-            <p>You can cancel your subscription at any time:</p>
-            <ul>
-                <li>Your PRO access will continue until the end of your current billing period</li>
-                <li>No further charges will be made after cancellation</li>
-                <li>Cancellation does not automatically trigger a refund</li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>7. Contact Us</h2>
-            <p>If you have any questions about our refund policy, please contact us:</p>
-            <ul>
-                <li>Email: <a href="mailto:support@adrian-m.top">support@adrian-m.top</a></li>
-            </ul>
+            <h2>Contact Us</h2>
+            <p>If you have any questions about our refund policy, please contact us at <a href="mailto:support@adrian-m.top">support@adrian-m.top</a>.</p>
         </section>
     </article>
 
@@ -177,17 +142,6 @@
             color: var(--text-secondary);
             line-height: 1.8;
             margin-bottom: 12px;
-        }
-
-        .legal-page ul {
-            margin-left: 24px;
-            margin-bottom: 12px;
-        }
-
-        .legal-page li {
-            color: var(--text-secondary);
-            line-height: 1.8;
-            margin-bottom: 8px;
         }
 
         .legal-page a {
