--- a/terms.html
+++ b/terms.html
@@ -45,9 +45,10 @@
 
         <section>
             <h2>Legal Entity</h2>
-            <p><strong>ECHO</strong> is a mobile application developed and operated by Adrian Cheng (individual developer), based in Shenyang, Liaoning, China.</p>
-            <p>Business Name: <strong>ECHO</strong></p>
-            <p>Contact Email: support@adrian-m.top</p>
+            <p>These Terms of Service ("Terms") govern your use of the ECHO mobile application ("App", "Service", "we", "us", or "our").</p>
+            <p><strong>Legal Business Name: ECHO</strong></p>
+            <p>ECHO is developed and operated by Adrian Cheng, an individual developer based in Shenyang, Liaoning, China.</p>
+            <p>Contact: support@adrian-m.top</p>
         </section>
 
         <section>
@@ -91,10 +92,11 @@
 
         <section>
             <h2>5. Refund Policy</h2>
-            <p>5.1 You may request a full refund within 7 days of purchase, no questions asked.</p>
-            <p>5.2 To request a refund, email support@adrian-m.top.</p>
-            <p>5.3 Refunds will be processed within 5-10 business days to the original payment method.</p>
-            <p>5.4 Refund requests after 7 days will be considered on a case-by-case basis.</p>
+            <p>5.1 ECHO offers a 14-day money-back guarantee for all purchases.</p>
+            <p>5.2 You may request a full refund within 14 days of purchase for any reason.</p>
+            <p>5.3 To request a refund, email support@adrian-m.top with your purchase details.</p>
+            <p>5.4 Refunds will be processed within 5-10 business days to the original payment method.</p>
+            <p>5.5 For complete refund policy details, please see our <a href="refund.html">Refund Policy</a> page.</p>
         </section>
 
         <section>
