Fix: Add logo to secondary pages, add refund i18n translations

--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
                     <h4 data-i18n="footer.legal">Legal</h4>
                     <a href="terms.html" data-i18n="footer.terms">Terms of Service</a>
                     <a href="privacy.html" data-i18n="footer.privacy">Privacy Policy</a>
-                    <a href="refund.html">Refund Policy</a>
+                    <a href="refund.html" data-i18n="footer.refund">Refund Policy</a>
                 </div>
                 <div class="footer-col">
                     <h4 data-i18n="footer.contact">Contact</h4>
