--- a/privacy.html
+++ b/privacy.html
@@ -13,8 +13,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <a href="index.html" class="logo">
-                <span class="logo-icon">◇</span>
-                <span class="logo-text">ECHO</span>
+                <img src="assets/images/logo.png" alt="ECHO Logo" class="logo-img">
             </a>
             <div class="nav-links">
                 <a href="index.html#features" data-i18n="nav.features">Features</a>
