Fix: Replace OpenAI Whisper with Vosk (local speech recognition)

--- a/privacy.html
+++ b/privacy.html
@@ -149,8 +149,8 @@
             <ul>
                 <li><strong>Supabase:</strong> User authentication and data storage</li>
                 <li><strong>Paddle:</strong> Payment processing</li>
-                <li><strong>OpenAI Whisper:</strong> Speech-to-text (processed locally)</li>
             </ul>
+            <p><strong>Note:</strong> Speech recognition (Vosk) is processed entirely on your device. No audio data is sent to external servers.</p>
             <p>These third-party services have their own privacy policies, which we encourage you to review.</p>
         </section>
 
