Remove all addresses from website (keep only business name and email)

--- a/refund.html
+++ b/refund.html
@@ -45,7 +45,7 @@
         <section>
             <h2>Legal Business Name</h2>
             <p><strong>ECHO</strong></p>
-            <p>Operated by Adrian Cheng, Shenyang, Liaoning, China.</p>
+            <p>Operated by Adrian Cheng, an individual developer.</p>
             <p>Contact: support@adrian-m.top</p>
         </section>
 
