--- a/terms.html
+++ b/terms.html
@@ -46,7 +46,7 @@
             <h2>Legal Entity</h2>
             <p>These Terms of Service ("Terms") govern your use of the ECHO mobile application ("App", "Service", "we", "us", or "our").</p>
             <p><strong>Legal Business Name: ECHO</strong></p>
-            <p>ECHO is developed and operated by Adrian Cheng, an individual developer based in Shenyang, Liaoning, China.</p>
+            <p>ECHO is developed and operated by Adrian Cheng, an individual developer.</p>
             <p>Contact: support@adrian-m.top</p>
         </section>
 
