feat: Add dynamic pricing from Supabase backend

--- a/pricing.html
+++ b/pricing.html
@@ -213,6 +213,7 @@
         </div>
     </footer>
 
+    <script src="pricing.js"></script>
     <script src="i18n.js"></script>
     <style>
         /* Pricing Page Specific Styles */
