--- a/pricing.html
+++ b/pricing.html
@@ -100,16 +100,16 @@
             </table>
         </div>
 
-        <!-- 订阅计划 - 使用 APP 实际定价 -->
+        <!-- 订阅计划 - 月度、季度、年度 -->
         <div class="pricing-plans">
             <div class="plan-card">
                 <h3 data-i18n="pricing.monthly.name">PRO Monthly</h3>
                 <div class="plan-price">
-                    <span class="currency">¥</span>
-                    <span class="amount">18</span>
+                    <span class="currency">$</span>
+                    <span class="amount">4.99</span>
                     <span class="period" data-i18n="pricing.monthly.period">/month</span>
                 </div>
-                <p class="plan-desc">Flexible monthly subscription</p>
+                <p class="plan-desc" data-i18n="pricingPage.flexibleMonthly">Flexible monthly subscription</p>
                 <ul class="plan-features">
                     <li data-i18n="pricing.pro.f1">✓ Unlimited shadowing</li>
                     <li data-i18n="pricing.pro.f2">✓ Unlimited word lookup</li>
@@ -118,15 +118,33 @@
                 <a href="index.html#download" class="btn btn-secondary" data-i18n="pricing.monthly.btn">Choose Plan</a>
             </div>
 
+            <div class="plan-card">
+                <div class="plan-badge-cyan" data-i18n="pricing.quarterly.badge">Popular</div>
+                <h3 data-i18n="pricing.quarterly.name">PRO Quarterly</h3>
+                <div class="plan-price">
+                    <span class="currency">$</span>
+                    <span class="amount">12.99</span>
+                    <span class="period" data-i18n="pricing.quarterly.period">/quarter</span>
+                </div>
+                <p class="plan-desc" data-i18n="pricingPage.saveQuarterly">Save 13% vs monthly</p>
+                <ul class="plan-features">
+                    <li data-i18n="pricing.pro.f1">✓ Unlimited shadowing</li>
+                    <li data-i18n="pricing.pro.f2">✓ Unlimited word lookup</li>
+                    <li data-i18n="pricing.pro.f3">✓ Unlimited video import</li>
+                    <li data-i18n="pricing.pro.f4">✓ Full learning reports</li>
+                </ul>
+                <a href="index.html#download" class="btn btn-secondary" data-i18n="pricing.quarterly.btn">Choose Plan</a>
+            </div>
+
             <div class="plan-card featured">
                 <div class="plan-badge" data-i18n="pricing.yearly.badge">Best Value</div>
                 <h3 data-i18n="pricing.yearly.name">PRO Yearly</h3>
                 <div class="plan-price">
-                    <span class="currency">¥</span>
-                    <span class="amount">98</span>
+                    <span class="currency">$</span>
+                    <span class="amount">39.99</span>
                     <span class="period" data-i18n="pricing.yearly.period">/year</span>
                 </div>
-                <p class="plan-desc">Save 55% vs monthly</p>
+                <p class="plan-desc" data-i18n="pricingPage.saveYearly">Save 33% vs monthly</p>
                 <ul class="plan-features">
                     <li data-i18n="pricing.pro.f1">✓ Unlimited shadowing</li>
                     <li data-i18n="pricing.pro.f2">✓ Unlimited word lookup</li>
@@ -135,26 +153,6 @@
                     <li data-i18n="pricing.pro.f5">✓ Priority support</li>
                 </ul>
                 <a href="index.html#download" class="btn btn-primary" data-i18n="pricing.yearly.btn">Choose Plan</a>
-            </div>
-
-            <div class="plan-card">
-                <div class="plan-badge-gold" data-i18n="pricing.lifetime.badge">Forever</div>
-                <h3 data-i18n="pricing.lifetime.name">PRO Lifetime</h3>
-                <div class="plan-price">
-                    <span class="currency">¥</span>
-                    <span class="amount">198</span>
-                    <span class="period" data-i18n="pricing.lifetime.period">one-time</span>
-                </div>
-                <p class="plan-desc">Pay once, use forever</p>
-                <ul class="plan-features">
-                    <li data-i18n="pricing.pro.f1">✓ Unlimited shadowing</li>
-                    <li data-i18n="pricing.pro.f2">✓ Unlimited word lookup</li>
-                    <li data-i18n="pricing.pro.f3">✓ Unlimited video import</li>
-                    <li data-i18n="pricing.pro.f4">✓ Full learning reports</li>
-                    <li data-i18n="pricing.pro.f5">✓ Priority support</li>
-                    <li>✓ All future updates</li>
-                </ul>
-                <a href="index.html#download" class="btn btn-secondary" data-i18n="pricing.lifetime.btn">Choose Plan</a>
             </div>
         </div>
 
