feat: Update download link to https://download.echo.adrian-m.top/app-release.apk

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
             <h2 data-i18n="download.title">Send Out Your <span class="gradient-text" data-i18n="download.titleHighlight">First Echo</span></h2>
             <p data-i18n="download.desc">The world is waiting for your response.</p>
             <div class="download-buttons">
-                <a href="#" class="download-btn">
+                <a href="https://download.echo.adrian-m.top/app-release.apk" class="download-btn">
                     <span class="download-icon">🤖</span>
                     <div class="download-text">
                         <span class="small" data-i18n="download.getIt">GET IT ON</span>
