--- a/pricing.html
+++ b/pricing.html
@@ -18,6 +18,7 @@
             <div class="nav-links">
                 <a href="index.html#features" data-i18n="nav.features">Features</a>
                 <a href="pricing.html" class="active" data-i18n="nav.pricing">Pricing</a>
+                <a href="about.html" data-i18n="nav.about">About</a>
                 <a href="index.html#download" data-i18n="nav.download">Download</a>
             </div>
             <div class="lang-switcher">
@@ -187,6 +188,7 @@
                 <span class="logo-icon">◇</span>
                 <span class="logo-text">ECHO</span>
                 <p data-i18n="footer.tagline">Immersive Language Learning</p>
+                <p class="developer-badge" data-i18n="footer.developer">Operated by an independent developer.</p>
             </div>
             <div class="footer-links">
                 <div class="footer-col">
@@ -197,8 +199,10 @@
                 </div>
                 <div class="footer-col">
                     <h4 data-i18n="footer.legal">Legal</h4>
+                    <a href="about.html" data-i18n="footer.about">About</a>
                     <a href="terms.html" data-i18n="footer.terms">Terms of Service</a>
                     <a href="privacy.html" data-i18n="footer.privacy">Privacy Policy</a>
+                    <a href="refund.html" data-i18n="footer.refund">Refund Policy</a>
                 </div>
                 <div class="footer-col">
                     <h4 data-i18n="footer.contact">Contact</h4>
