Update pricing list items to match design (remove checkmarks)

--- a/pricing.html
+++ b/pricing.html
@@ -112,9 +112,9 @@
                 </div>
                 <p class="plan-desc" data-i18n="pricingPage.flexibleMonthly">Flexible monthly subscription</p>
                 <ul class="plan-features">
-                    <li data-i18n="pricing.pro.f1">✓ Unlimited shadowing</li>
-                    <li data-i18n="pricing.pro.f2">✓ Unlimited word lookup</li>
-                    <li data-i18n="pricing.pro.f3">✓ Unlimited video import</li>
+                    <li data-i18n="pricing.pro.f1">Unlimited shadowing</li>
+                    <li data-i18n="pricing.pro.f2">Unlimited word lookup</li>
+                    <li data-i18n="pricing.pro.f3">Unlimited video import</li>
                 </ul>
 
             </div>
@@ -129,10 +129,10 @@
                 </div>
                 <p class="plan-desc" data-i18n="pricingPage.saveQuarterly">Save 13% vs monthly</p>
                 <ul class="plan-features">
-                    <li data-i18n="pricing.pro.f1">✓ Unlimited shadowing</li>
-                    <li data-i18n="pricing.pro.f2">✓ Unlimited word lookup</li>
-                    <li data-i18n="pricing.pro.f3">✓ Unlimited video import</li>
-                    <li data-i18n="pricing.pro.f4">✓ Full learning reports</li>
+                    <li data-i18n="pricing.pro.f1">Unlimited shadowing</li>
+                    <li data-i18n="pricing.pro.f2">Unlimited word lookup</li>
+                    <li data-i18n="pricing.pro.f3">Unlimited video import</li>
+                    <li data-i18n="pricing.pro.f4">Full learning reports</li>
                 </ul>
 
             </div>
@@ -147,11 +147,11 @@
                 </div>
                 <p class="plan-desc" data-i18n="pricingPage.saveYearly">Save 33% vs monthly</p>
                 <ul class="plan-features">
-                    <li data-i18n="pricing.pro.f1">✓ Unlimited shadowing</li>
-                    <li data-i18n="pricing.pro.f2">✓ Unlimited word lookup</li>
-                    <li data-i18n="pricing.pro.f3">✓ Unlimited video import</li>
-                    <li data-i18n="pricing.pro.f4">✓ Full learning reports</li>
-                    <li data-i18n="pricing.pro.f5">✓ Priority support</li>
+                    <li data-i18n="pricing.pro.f1">Unlimited shadowing</li>
+                    <li data-i18n="pricing.pro.f2">Unlimited word lookup</li>
+                    <li data-i18n="pricing.pro.f3">Unlimited video import</li>
+                    <li data-i18n="pricing.pro.f4">Full learning reports</li>
+                    <li data-i18n="pricing.pro.f5">Priority support</li>
                 </ul>
 
             </div>
