Update homepage images to support multi-language switching

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <!-- 1. Immersive Mode (Landscape) -->
             <div class="app-screen-wrapper landscape-wrapper span-2">
                 <div class="app-screen landscape">
-                    <img src="assets/images/chenjin.jpg" alt="Immersive Mode" class="screen-image">
+                    <img id="img-immersive" src="assets/images/show/chenjin/EEchenjin.jpg" alt="Immersive Mode" class="screen-image">
                 </div>
                 <span class="screen-label" data-i18n="screenshots.immersive">Immersive Mode</span>
             </div>
@@ -140,7 +140,7 @@
             <!-- 2. Landscape Mode (Landscape) -->
             <div class="app-screen-wrapper landscape-wrapper span-2">
                 <div class="app-screen landscape">
-                    <img src="assets/images/hengping.jpg" alt="Landscape" class="screen-image">
+                    <img id="img-landscape" src="assets/images/show/hengping/EEhengping.jpg" alt="Landscape" class="screen-image">
                 </div>
                 <span class="screen-label" data-i18n="screenshots.landscape">Landscape Mode</span>
             </div>
@@ -148,7 +148,7 @@
             <!-- 3. Analysis -->
             <div class="app-screen-wrapper">
                 <div class="app-screen">
-                    <img src="assets/images/fenxi.jpg" alt="Analysis" class="screen-image">
+                    <img id="img-analysis" src="assets/images/show/pfbaogao/EEpfbaogao.jpg" alt="Analysis" class="screen-image">
                 </div>
                 <span class="screen-label" data-i18n="screenshots.analysis">Analysis</span>
             </div>
@@ -156,7 +156,7 @@
             <!-- 4. Scoring -->
             <div class="app-screen-wrapper">
                 <div class="app-screen">
-                    <img src="assets/images/gendupingfen.jpg" alt="Scoring" class="screen-image">
+                    <img id="img-scoring" src="assets/images/show/pingfen/EEpingfen.jpg" alt="Scoring" class="screen-image">
                 </div>
                 <span class="screen-label" data-i18n="screenshots.scoring">Scoring</span>
             </div>
@@ -164,7 +164,7 @@
             <!-- 5. Report -->
             <div class="app-screen-wrapper">
                 <div class="app-screen">
-                    <img src="assets/images/study_report.jpg" alt="Report" class="screen-image">
+                    <img id="img-report" src="assets/images/show/report/EEreport.jpg" alt="Report" class="screen-image">
                 </div>
                 <span class="screen-label" data-i18n="screenshots.report">Learning Report</span>
             </div>
@@ -172,7 +172,7 @@
             <!-- 6. Loop Mode -->
             <div class="app-screen-wrapper">
                 <div class="app-screen">
-                    <img src="assets/images/xunhuanmoshi.jpg" alt="Loop Mode" class="screen-image">
+                    <img id="img-loop" src="assets/images/show/xunhaun/EExunhuan.jpg" alt="Loop Mode" class="screen-image">
                 </div>
                 <span class="screen-label" data-i18n="screenshots.loop">Loop Mode</span>
             </div>
