--- a/paddle-checkout.html
+++ b/paddle-checkout.html
@@ -353,7 +353,9 @@
     <div class="container">
         <div class="logo-wrapper">
             <div class="logo-glow"></div>
-            <div class="logo">E</div>
+            <div class="logo">
+                <img src="assets/images/logo.png" alt="ECHO Logo" style="width: 100%; height: 100%; object-fit: contain; padding: 10px;">
+            </div>
         </div>
         
         <h1 class="title">ECHO PRO</h1>
