--- a/paddle-checkout.html
+++ b/paddle-checkout.html
@@ -276,8 +276,8 @@
         <p class="subtitle">Premium Subscription</p>
         
         <div class="card">
-            <!-- Loading State -->
-            <div class="loading" id="loading">
+            <!-- Loading State - 默认隐藏 -->
+            <div class="loading" id="loading" style="display: none;">
                 <div class="spinner-container">
                     <div class="spinner"></div>
                     <div class="spinner-inner"></div>
