fix: Move logo and text to top of page

--- a/paddle-checkout.html
+++ b/paddle-checkout.html
@@ -267,7 +267,7 @@
 <body>
     <div class="bg-gradient"></div>
     
-    <div class="container" style="justify-content: flex-start; padding-top: 80px;">
+    <div class="container" style="position: absolute; top: 60px; left: 50%; transform: translateX(-50%);">
         <div class="logo-wrapper">
             <img src="assets/images/logo.png" alt="ECHO Logo" class="logo-img">
         </div>
